# RustDeveloperScreeningJob

./: setup.py
.eggs/cffi-1.14.0-py3.8-win-amd64.egg/: _cffi_backend.cp38-win_amd64.pyd  _cffi_backend.py
.eggs/cffi-1.14.0-py3.8-win-amd64.egg/EGG-INFO/: PKG-INFO  native_libs.txt
data/: in.xlsx  ~$in.xlsx
rtrv/: __init__.py
rtrv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rust_project/: Cargo.toml  build.rs
rust_project/src/: lib.rs  main.rs
